--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "muteCheckBot",
+  "name": "mutechecknot",
   "version": "1.0.0",
   "dependencies": {
+    "cron": "^1.8.2",
     "discord.js": "^12.5.1"
   },
   "devDependencies": {
